# Cognitive.Engine.Graphs

./: .coderabbit.yaml  .cursorrules  .dockerignore  .editorconfig  .env.template  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .suite6-config.json  AGENTS.md  AGENT_BOOTSTRAP.md  AI_AGENT_REVIEW_CHECKLIST.md  ARCHITECTURE.md  CHANGELOG.md  CI_WHITELIST_REGISTER.md  CLAUDE.md  CONFIG_ENV_CONTRACT.md  DEFERRED.md  DEPENDENCY_SURFACE.md  Dockerfile  Dockerfile.prod  EXECUTION_FLOWS.md  FEATURE_FLAGS.md  FILE_INDEX_FOR_AGENTS.md  GUARDRAILS.md  INTELLIGENCE_ARCHITECTURE.md  INTELLIGENCE_BRIEF.md  INVARIANTS.md  LICENSE  Makefile  README.md  ROADMAP.md  Readme-Requirements.md  SECURITY.md  TESTING.md  TODO.md  TROUBLESHOOTING.md  UniversalDevelopmentPack.yaml  docker-compose.prod.yml  (+12 more)
.claude/: settings.json
.claude/agents/: code-reviewer.md  domain-validator.md
.claude/rules/: capability-registry.md  contracts.md  feature-flags.md  gates-scoring.md  learnings.md  routing.md  subsystems.md  system-state.md  testing.md
.github/: .gitignore  CODEOWNERS  copilot-instructions.md  dependabot.yml  env.template  pr_review_config.yaml
.github/scripts/: setup-repo-vars.sh
.github/workflows/: audit.yml  auto-fix-adr.yml  ci-quality.yml  ci.yml  codeql.yml  coderabbit-notify.yml  compliance.yml  contracts.yml  dev-layer-gmp.yml  docker-build.yml  docs-code-sync.yml  k8s-deploy.yml  pr-review-enforcement.yml  refactoring-validation.yml  release-drafter.yml  supply-chain.yml  terminology-guard.yml
.hypothesis/constants/: 04fd8024d8e13c54  (+107 more)
.semgrep/: semgrep-rules.yaml
IaC Folder — Complete & Reusable/: README.md  Readme-IaC.md  backend.tf  main.tf  modules-api-main.tf  modules-api-outputs.tf  modules-api-variables.tf  modules-monitoring-main.tf  modules-monitoring-outputs.tf  modules-monitoring-variables.tf  modules-neo4j-main.tf  modules-neo4j-outputs.tf  modules-neo4j-variables.tf  modules-networking-main.tf  modules-networking-outputs.tf  modules-networking-variables.tf  modules-redis-main.tf  modules-redis-outputs.tf  modules-redis-variables.tf  outputs.tf  terraform.tfvars.example  variables.tf
artifacts/: audit_report.md  coverage_matrix.json  coverage_report.md  spec_checklist.json
auth/: app.py  settings.py  test_auth_middleware.py
chassis/: __init__.py  action_registry.py  actions.py  app.py  audit.py  chassis_app.py  config.py  engine_boot.py  entrypoint.sh  errors.py  health.py  middleware.py  orchestrator.py  pii.py  router.py  types.py
config/: perplexity_audit.yaml
contracts/: README.md  contract_01.yaml  contract_02.yaml  contract_03.yaml  contract_04.yaml  contract_05.yaml  contract_06.yaml  contract_07.yaml  contract_08.yaml  contract_09.yaml  contract_10.yaml  contract_11.yaml  contract_12.yaml  contract_13.yaml  contract_14.yaml  contract_15.yaml  contract_16.yaml  contract_17.yaml  contract_18.yaml  contract_19.yaml  contract_20.yaml  contract_21.yaml  contract_22.yaml  contract_23.yaml  contract_24.yaml
docs/: ACTION ITEMS.MD  AI_AGENT_REVIEW_CHECKLIST.md  ARCHITECTURE.md  AUDIT_HARNESS.md  Audit Harness-Explained.md  CI_PIPELINE.md  DEPLOYMENT.md  FEATURE_FLAGS.md  FEATURE_GATES.md  GRAPH-architecture.md  L9_Contract_Enforcement_System.md  PlasticOS Graph Cognitive Engine.yaml  SEL4_UPGRADES.md  SEL4_UPGRADES_EXECUTIVE.md  TROUBLESHOOTING.md  What the Audit Harness Does.md  gate_dispatch_wiring.md  graph-cognitive-engine-spec-v1.0.yaml  graph_cognitive_engine_spec_PATCH_001 (1).yaml  integration_runbook.md  plasticos_domain_spec_changes.md  plasticos_domain_spec_v0.3.0.yaml  plasticos_domain_spec_v0.4.yaml
domains/: MASTER-SPEC-ALL-DOMAINS.yaml  README.md  TESTING_GUIDE.md  _template.yaml  aios_god_agent_domain_spec.yaml  domain_extractor.py  executive_assistant_domain_spec.yaml  freight_matching_domain_spec.yaml  healthcare_referral_domain_spec.yaml  legal_discovery_domain_spec.yaml  mortgage_brokerage_domain_spec.yaml  plasticos_domain_spec.yaml  repo_as_agent_domain_spec.yaml  research_agent_domain_spec.yaml  roofing_company_domain_spec.yaml
engine/: __init__.py  boot.py  contract_enforcement.py  convergence_controller_patch.py  gate_client.py  gate_registration.py  graph_return_channel.py  handlers.py  inference_bridge.py  inference_rule_registry.py  middleware.py  packet_bridge.py  spec.yaml  startup_wiring.py  state.py
harvest_staging/: BANNED_PATTERNS.md  DELEGATION_PROTOCOL.md  DEPENDENCY_INJECTION.md  ENV_VARS.md  ERROR_HANDLING.md  FIELD_NAMES.md  HANDLER_PAYLOADS.md  MEMORY_SUBSTRATE_ACCESS.md  METHOD_SIGNATURES.md  NODE_REGISTRATION.md  OBSERVABILITY.md  PACKET_ENVELOPE_FIELDS.md  PACKET_TYPE_REGISTRY.md  PYDANTIC_YAML_MAPPING.md  RETURN_VALUES.md  SHARED_MODELS.md  TEST_PATTERNS.md
l9_core/: models.py
reports/: GAP-ANALYSIS-Audit-Harness-and-Spec-Coverage.md  GMP-Report-130-Contract-Enforcement-System.md  GMP-Report-131-Fix-DomainPackLoader-Import-And-Constructor.md  GMP-Report-132-Fix-Residual-PreExisting-Issues.md  GMP-Report-133-Gate-SDK-Integration.md  hoprag_ceg_enhancement_program.md  transport-sdk_cutover_b23e837c.plan.md
scripts/: README.md  audit.sh  domain_extractor.py  entrypoint.sh  scripts-build.sh  scripts-deploy.sh  scripts-dev.sh  scripts-gds-trigger.sh  scripts-health.sh  scripts-migrate.sh  scripts-seed.sh  scripts-setup.sh  scripts-test.sh
templates/: .env.recommended.template  .env.required.template  .env.vps.template  styleguide.template.md
tests/: README.md  conftest.py  test_algorithmic_upgrades.py  test_boot_and_registry.py  test_compliance_engine.py  test_config_loader.py  test_enrich.py  test_handlers.py  test_health_check.py  test_pareto_wiring.py  test_scoring_extended.py
tools/: ai_review.py  audit_dispatch.py  audit_engine.py  audit_harness.py  audit_rules.yaml  check_deprecated_imports.py  check_packet_envelope_prohibited.py  contract_report.py  contract_scanner.py  domain_extractor.py  hoprag_benchmark.py  l9_meta_injector.py  l9_template_manifest.yaml  pplx_research.py  spec_extract.py  telegram_review_webhook.py  validate_domain.py  verify_contracts.py
(+420 files in other folders)
