[tool.poetry]
name = "l9-engine"
version = "0.1.0"
description = "Domain-agnostic graph-native matching engine"
authors = ["L9 <eng@l9.dev>"]
readme = "README.md"
packages = [{include = "engine"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
neo4j = "^5.25.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
pyyaml = "^6.0"
redis = "^5.2.0"
apscheduler = "^3.10.0"
httpx = "^0.28.0"
structlog = "^24.4.0"
prometheus-client = "^0.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.8.0"
mypy = "^1.13.0"
faker = "^33.0.0"
testcontainers = {extras = ["neo4j"], version = "^4.8.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (no external deps)",
    "integration: Integration tests (requires Neo4j)",
    "compliance: Regulatory compliance tests",
    "performance: Performance benchmarks",
    "slow: Slow tests (>5s)",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["engine"]
omit = ["engine/db/*", "tests/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "SIM",
    "A", "C4", "DTZ", "T10", "EM", "ISC", "ICN", "PIE", "PT", "RET", "TCH", "ARG", "PTH", "PL", "TRY", "RUF",
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.l9_meta]
l9_schema = 1
origin = "engine-specific"
engine = "graph"
layer = ["build", "config"]
tags = ["build", "dependencies", "poetry"]
owner = "engine-team"
status = "active"
