[tool.poetry]
name = "l9-engine"
version = "0.1.0"
description = "Domain-agnostic graph-native matching engine"
authors = ["L9 <eng@l9.dev>"]
readme = "README.md"
packages = [{include = "engine"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.135.1"
uvicorn = {extras = ["standard"], version = "^0.41.0"}
neo4j = "^5.25.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
pyyaml = "^6.0"
redis = "^5.2.0"
apscheduler = "^3.10.0"
httpx = "^0.28.0"
structlog = "^25.5.0"
prometheus-client = "^0.24.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.15.4"
mypy = "^1.13.0"
faker = "^40.5.1"
testcontainers = {extras = ["neo4j"], version = "^4.8.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (no external deps)",
    "integration: Integration tests (requires Neo4j)",
    "compliance: Regulatory compliance tests",
    "performance: Performance benchmarks",
    "slow: Slow tests (>5s)",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["engine"]
omit = ["engine/db/*", "tests/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "SIM",
    "A", "C4", "DTZ", "T10", "EM", "ISC", "ICN", "PIE", "PT", "RET", "TCH", "ARG", "PTH", "PL", "TRY", "RUF",
]
ignore = [
    "E501",     # line too long (handled by formatter)
    "TRY003",   # long exception messages (acceptable in domain code)
    "TRY400",   # logging.error vs logging.exception (acceptable)
    "EM101",    # raw string in exception (acceptable)
    "EM102",    # f-string in exception (acceptable)
    "PLR0913",  # too many arguments (audit/compliance APIs need many params)
    "PLR0912",  # too many branches (complex validation logic)
    "PLR0911",  # too many return statements (acceptable in tools)
    "PLR2004",  # magic value comparison (acceptable in tests/config)
    "TC001",    # typing-only first-party import (causes runtime issues)
    "TC003",    # typing-only stdlib import (causes runtime issues)
    "ARG001",   # unused function argument (often needed for interface compliance)
    "ARG002",   # unused method argument (often needed for interface compliance)
    "ARG003",   # unused class method argument (interface compliance)
    "ARG005",   # unused lambda argument (interface compliance)
    "PT011",    # pytest.raises too broad (acceptable in unit tests)
    "SIM102",   # collapsible if (readability preference)
    "SIM105",   # contextlib.suppress (explicit try/except is clearer)
    "RET504",   # unnecessary assign before return (readability)
    "PLC0415",  # import outside top-level (acceptable for lazy imports)
    "PLW0603",  # global statement (acceptable for module-level singletons)
    "DTZ005",   # datetime.now without tz (scheduler uses local time)
    "RUF012",   # mutable class default (ClassVar annotation not always needed)
    "RUF013",   # implicit Optional (legacy code)
    "TRY004",   # TypeError vs other exception (acceptable)
    "B007",     # unused loop control variable (acceptable)
    "E741",     # ambiguous variable name (acceptable in tools)
    "PLC0206",  # dict index missing items (acceptable)
    "UP038",    # isinstance tuple vs union (tuple is clearer for runtime checks)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["S101", "ARG001", "ARG002", "PLR2004", "PT011", "B017", "F841"]
"domains/**" = ["PTH123"]
"engine/packet/test_*.py" = ["B017"]  # test files in engine/packet

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "^current work/",
    "^harvest_staging/",
    "^docs/",
    "^domains/",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "tools.*"
disallow_untyped_defs = false
check_untyped_defs = false

[tool.l9_meta]
l9_schema = 1
origin = "engine-specific"
engine = "graph"
layer = ["build", "config"]
tags = ["build", "dependencies", "poetry"]
owner = "engine-team"
status = "active"
