[tool.poetry]
name = "l9-engine"
version = "0.1.0"
description = "Domain-agnostic graph-native matching engine"
authors = ["L9 <eng@l9.dev>"]
readme = "README.md"
packages = [{include = "engine"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.135.2"
uvicorn = {extras = ["standard"], version = "^0.42.0"}
neo4j = "^5.25.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
pyyaml = "^6.0"
redis = "^7.4.0"
apscheduler = "^3.10.0"
httpx = "^0.28.0"
structlog = "^25.5.0"
prometheus-client = "^0.24.1"
numpy = "^2.4.4"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "7.1.0"
pytest-mock = "^3.14.0"
ruff = "0.15.7"
mypy = "1.19.1"
types-PyYAML = ">=6.0"
faker = "^40.5.1"
testcontainers = {extras = ["neo4j"], version = "^4.8.0"}
hypothesis = "^6.100.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (no external deps)",
    "integration: Integration tests (requires Neo4j)",
    "compliance: Regulatory compliance tests",
    "performance: Performance benchmarks",
    "slow: Slow tests (>5s)",
    "contract: Contract verification tests (W5-01)",
    "finding: Audit finding regression test (W5-02)",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["engine"]
omit = ["engine/db/*", "tests/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "SIM",
    "A", "C4", "DTZ", "T10", "EM", "ISC", "ICN", "PIE", "PT", "RET", "TCH", "ARG", "PTH", "PL", "TRY", "RUF",
    "S",        # flake8-bandit: security checks (harvested from L9 Kernel)
    "ASYNC",    # flake8-async: async antipattern detection (harvested from L9 Kernel)
]
ignore = [
    "E501",     # line too long (handled by formatter)
    "TRY003",   # long exception messages (acceptable in domain code)
    "TRY400",   # logging.error vs logging.exception (acceptable)
    "EM101",    # raw string in exception (acceptable)
    "EM102",    # f-string in exception (acceptable)
    "PLR0913",  # too many arguments (audit/compliance APIs need many params)
    "PLR0912",  # too many branches (complex validation logic)
    "PLR0911",  # too many return statements (acceptable in tools)
    "PLR2004",  # magic value comparison (acceptable in tests/config)
    "TC001",    # typing-only first-party import (causes runtime issues)
    "TC003",    # typing-only stdlib import (causes runtime issues)
    "ARG001",   # unused function argument (often needed for interface compliance)
    "ARG002",   # unused method argument (often needed for interface compliance)
    "ARG003",   # unused class method argument (interface compliance)
    "ARG005",   # unused lambda argument (interface compliance)
    "PT011",    # pytest.raises too broad (acceptable in unit tests)
    "SIM102",   # collapsible if (readability preference)
    "SIM105",   # contextlib.suppress (explicit try/except is clearer)
    "RET504",   # unnecessary assign before return (readability)
    "PLC0415",  # import outside top-level (acceptable for lazy imports)
    "PLW0603",  # global statement (acceptable for module-level singletons)
    "DTZ005",   # datetime.now without tz (scheduler uses local time)
    "RUF012",   # mutable class default (ClassVar annotation not always needed)
    "RUF013",   # implicit Optional (legacy code)
    "TRY004",   # TypeError vs other exception (acceptable)
    "B007",     # unused loop control variable (acceptable)
    "E741",     # ambiguous variable name (acceptable in tools)
    "PLC0206",  # dict index missing items (acceptable)
    "S104",     # bind 0.0.0.0 — containerized services
    "S110",     # try-except-pass — optional feature degradation
    "S112",     # try-except-continue — resilient batch operations
    "S311",     # non-crypto random — scoring jitter, test data
    "S108",     # hardcoded tmp — containerized, ephemeral
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["S101", "S105", "S106", "S108", "ARG001", "ARG002", "PLR2004", "PT011", "B017", "F841", "SIM117", "RUF043"]
"domains/**" = ["PTH123"]
"engine/packet/test_*.py" = ["B017"]
"scripts/**" = ["S603", "S607", "E402"]
"tools/**" = ["S603", "S607", "TRY300", "PTH123", "PLR0915", "PLW1510", "E402", "B904"]
"auth/**" = ["S101", "S105", "S106", "TC002", "TRY301", "TRY401"]
"chassis/**" = ["TRY300", "TRY301", "TRY401", "S105", "B027", "B904"]
"chassis/auth/test_*.py" = ["S101", "S105", "S106"]
"engine/config/**" = ["S105", "PLR0915"]
"engine/handlers.py" = ["PLR0915"]
"engine/security/**" = ["S102", "E402", "B904", "TRY300", "UP047", "TRY301"]
"agents/cursor/**" = [
    "PLW1510",
    "PLW2901",
    "S608",
    "S310",
    "RUF001",
    "TRY300",
    "F841",
    "RUF059",
    "PLR0915",
    "E402",
    "B904",
    "SIM117",
    "PLR2004",
    "TRY401",
    "EM101",
    "EM102",
    "ISC001",
    "PTH123",
    "S105",
    "S106",
    "PLR0912",
    "PLR0911",
    "C901",
    "UP047",
    "RUF012",
    "RUF013",
    "TC001",
    "TC003",
    "ARG001",
    "ARG002",
    "ARG003",
    "ARG005",
    "B007",
    "E741",
    "PLC0415",
    "PLC0206",
    "SIM102",
    "SIM105",
    "RET504",
    "B017",
    "F403",
    "F405",
    "N818",
    "A002",
    "A003",
    "S603",
    "S607",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true              # catch untyped returns (harvested from L9 Kernel)
warn_unused_configs = true
warn_unreachable = true             # catch dead code paths (harvested from L9 Kernel)
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]         # Pydantic model type awareness (harvested from L9 Kernel)
exclude = [
    "^current work/",
    "^harvest_staging/",
    "^docs/",
    "^domains/",
    "^agents/cursor/",
]

[tool.pydantic-mypy]
init_forbid_extra = true            # Flag extra fields in model __init__
init_typed = true                   # Enforce typed __init__ params
warn_required_dynamic_aliases = true # Catch alias misuse

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "tools.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "chassis.*"
ignore_errors = true

[tool.l9_meta]
l9_schema = 1
origin = "engine-specific"
engine = "graph"
layer = ["build", "config"]
tags = ["build", "dependencies", "poetry"]
owner = "engine-team"
status = "active"
